# mephi-c-training

./: .gitignore  CMakeLists.txt  README.md  package.sh
armstrong/: armstrong.c  armstrong.h
libs/armstrong/: CMakeLists.txt
libs/list_processor/: list_processor.c  list_processor.h
libs/process_array/: CMakeLists.txt
libs/string_processor/: CMakeLists.txt  string_processor.c  string_processor.h
sum_of_digits/: sum_of_digits.c  sum_of_digits.h
task1/: CMakeLists.txt  README.md  task1_main.c
task2/: CMakeLists.txt  README.md  process_array.c  process_array.h  task2_main.c
task3/: CMakeLists.txt  README.md  task3_main.c
task4/: CMakeLists.txt  README.md  task4_main.c
